fixed bug on small screen resolutions

--- a/mods/metaexplorer.io/src/styles/index.scss
+++ b/mods/metaexplorer.io/src/styles/index.scss
@@ -69,7 +69,9 @@
 	//background-color: #00000008;
 	align-self: center;
 }
-
+.flex-container.titletextandimage{
+	align-items: center;
+}
 .flex-container.titletextandimage.column >div {
 	margin-bottom: 30px;
 }
